--- a/videogallery.html
+++ b/videogallery.html
@@ -449,23 +449,23 @@
 
     <div class="gallery">
         <div class="video-container" >
-            <video src="images/05.mp4" controls muted></video>
+            <video src="images/05.mp4" controls></video>
         </div>
         <div class="video-container" >
-            <video src="images/05.mp4"controls muted></video>
+            <video src="images/05.mp4"controls></video>
         </div>
         <div class="video-container" >
-            <video src="images/05.mp4" controls muted></video>
+            <video src="images/05.mp4" controls></video>
         </div>
         <div class="video-container" >
-            <video src="images/05.mp4" controls muted></video>
+            <video src="images/05.mp4" controls></video>
         </div>
     </div>
 
     
 
     <div class="landscape-video">
-        <video src="images/vid.mp4" controls muted></video>
+        <video src="images/vid.mp4" controls></video>
     </div>
 
    
