--- a/cake.html
+++ b/cake.html
@@ -546,7 +546,7 @@
 
     <!-- Navigation Buttons -->
     <div class="nav-buttons">
-        <button class="btn" onclick="goBack()">◀ Back to Videogallery</button>
+        <button class="btn" onclick="goBack()">◀ Back to Memorylane</button>
         <button class="btn" onclick="goNext()">Next Surprise ▶</button>
     </div>
 
