--- a/videogallery.html
+++ b/videogallery.html
@@ -427,7 +427,7 @@
 
     <!-- Navigation Buttons -->
     <div class="nav-buttons">
-        <button class="btn" onclick="goBack()">◀ Back to Memory Lane</button>
+        <button class="btn" onclick="goBack()">◀ Back to Cake</button>
         <button class="btn" onclick="goNext()">Next Surprise ▶</button>
     </div>
 
