--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <img id="stikerAkhir2" class="sembunyi" src="./assets/panah.gif" />
                 </div>
                 <div id="scroll-container" class="blocktext">
-                    <h1 id="teks3" class="scale0 quicksand" style="font-size: 17px;font-weight:400"><b style="font-size: 22px;">Yay! 🥳</b><br><br>Thank you for agrreing 😋<br><br><b>Now I Want to Ask You Something 😝🩷</b></h1>
+                    <h1 id="teks3" class="scale0 quicksand" style="font-size: 17px;font-weight:400"><b style="font-size: 22px;">Yay! 🥳</b><br><br>Thank you for agreeing 😋<br><br><b>Now I Want to Ask You Something 😝🩷</b></h1>
                     <h1 id="teksTambahan" class="sembunyi"><span id="teksLove">I 💖 You</span></h1>
                     <script>const loveEmojis = ['💖']</script>
                 </div>
